@@ -15,17 +15,30 @@ package tech.morbit.Quality;
  *
  */
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
+import tech.morbit.Exception.InvalidInputException;
+
 import java.util.ArrayList;
 
 public class FixedValue extends Quality{
 
+    final public int valueCount = 1;
+
     private Object fixedValue;
 
-    public FixedValue(String comment, Integer typeNumber, ArrayList<Object> fixedValue) throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
-        super(comment, typeNumber, fixedValue);
-        this.fixedValue = fixedValue.get(0);
+    public <T> FixedValue(String comment, ArrayList<T> fixedValue) throws InvalidInputException {
+        super(comment);
+
+        if(fixedValue.size() == this.valueCount &&
+                (VALID_TYPES.contains(fixedValue.getFirst().getClass()) ||
+                        Quality.class.isAssignableFrom(fixedValue.getFirst().getClass())))
+        {
+            this.values = (ArrayList<Object>) fixedValue;
+            this.fixedValue = fixedValue.get(0);
+        } else{
+            System.out.println("ERROR IN CONSTRUCTOR");
+            System.out.println(name + ": " + fixedValue.getFirst().getClass() + " " + valueCount);
+            throw new InvalidInputException();
+        }
     }
 
     public Object getFixedValue(){
